# g19

./: README.md
bot/: bot.py
g19daemon/: CMakeLists.txt  mb.sh
g19daemon/src/plugins/wallpaper/: CMakeLists.txt  wallpaper.cpp  wallpaper.hpp  wallpaper.qrc
